home page completed

--- a/index.html
+++ b/index.html
@@ -3,9 +3,269 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Nefis Yemek Tarifleri</title>
-	<link rel="stylesheet" href="img/style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<!--Başlık-->
+	<header>
+		<p><b>Nefis Yemek Tarifleri</b>, en çok okunan yemek tarifi paylaşım sitesi. Üye ol, tariflerini paylaş.</p>
+
+		<div class="login-button">
+			<button class="button-style">Giriş Yap</button>
+			<button class="button-style">Üye Ol</button>
+		</div>
+	</header>
+
+	<!--Arama Kutusu-->
+	<section class="header-out">
+		<div class="group">
+			<img src="img/logo.jpg" alt="Nefis Yemek Tarifleri" height="100" width="100">
+
+			<div class="search-group">
+				<form action="" method="POST">
+					<input type="text" name="search-input" placeholder="Hangi tarifi istersin?" class="search-input" />
+					<input type="submit" name="search-button" class="search-button" value="Ara" />
+				</form>
+			</div>
+
+			<button class="send-tariffs-button">Tarif Gönder</button>
+		</div>
+	</section>
 	
+	<!--Menüler-->
+	<section class="menu-group">
+		<div class="flex-group">
+			<a href="#" class="menu">Anasayfa</a>
+			<a href="#" class="menu">Tarifler</a>
+			<a href="#" class="menu">Menüler</a>
+			<a href="#" class="menu">Keşfet</a>
+			<a href="#" class="menu">Yazarlar</a>
+			<a href="#" class="menu">Sorular</a>
+			<a href="#" class="menu">Deneme</a>
+			<a href="#" class="menu">Blog</a>
+			<a href="#" class="menu">Listeler</a>
+		</div>
+	</section>
+
+	<!--İçerik-->
+	<section class="content bg">
+		<div class="recipies">
+			<div class="recipe-title">
+				<p>Takip Ettiklerinizden Yeni Tarifler</p>
+				<a href="#">Daha fazla yazar takip et</a>
+			</div>
+
+			<div class="welcome-title">
+				<p>Türkiye'nin en çok okunan ve paylaşılan yemek tarifleri topluluğuna hoşgeldiniz</p>
+				<p>Yazar takip etme özelliğiyle takip ettiğiniz yazarların tariflerini öncelikli olarak görebilirsiniz.
+Takip etme işleminden sonra buraya tıklayarak sayfayı yenileyerek tarifleri görebilirsiniz..</p>
+			</div>
+
+			<div class="follow">
+				<p>Takip edilenler</p>
+				<div class="slider"></div>
+				<p>Yazarlar</p>
+				<div class="slider"></div>
+				<a href="#" class="all-author-text">Tüm yazarlarımızı görün</a>
+
+				<div class="all-see-group">
+					<button class="all-see">Tamamını Göster</button>
+				</div>
+			</div>
+		</div>
+		
+		<div class="categories">
+			<p>Kategoriler</p>
+			<div class="category-menu"><a href="">Menü İsmi</a></div>
+			<div class="category-menu"><a href="">Menü İsmi</a></div>
+			<div class="category-menu"><a href="">Menü İsmi</a></div>
+			<div class="category-menu"><a href="">Menü İsmi</a></div>
+			<div class="category-menu"><a href="">Menü İsmi</a></div>
+			<div class="category-menu"><a href="">Menü İsmi</a></div>
+			<div class="category-menu"><a href="">Menü İsmi</a></div>
+			<div class="category-menu"><a href="">Menü İsmi</a></div>
+			<div class="category-menu"><a href="">Menü İsmi</a></div>
+			<div class="category-menu"><a href="">Menü İsmi</a></div>
+			<div class="category-menu"><a href="">Menü İsmi</a></div>
+			<div class="category-menu"><a href="">Menü İsmi</a></div>
+		</div>
+	</section>
+
+	<section class="content bg">
+		<div class="recipies">
+			<div class="recipe-title">
+				<p>Yeni Tarifler</p>
+				<button class="all-see">Sen de Tarif Gönder</button>
+			</div>
+			
+			<div class="new-recipies">
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+			</div>
+			<div class="all-see-group">
+				<button class="all-see">Tamamını Göster</button>
+			</div>
+			
+		</div>
+		
+		<div class="categories">
+			<p>Son Blog Yazıları</p>
+			<div class="new-recipe-group">
+				<div class="new-post">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<a href="#">Yazı Başlığı asjfkasjfkasjfklajs</a>
+				</div>
+				<div class="new-post">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<a href="#">Yazı Başlığı asjfkasjfkasjfklajs</a>
+				</div>
+				<div class="new-post">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<a href="#">Yazı Başlığı asjfkasjfkasjfklajs</a>
+				</div>
+				<div class="new-post">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<a href="#">Yazı Başlığı asjfkasjfkasjfklajs</a>
+				</div>
+				<div class="new-post">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<a href="#">Yazı Başlığı asjfkasjfkasjfklajs</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<section class="content bg">
+		<div class="recipies">
+			<div class="recipe-title">
+				<p>Menüler</p>
+				<button class="all-see">Menü Gönder</button>
+			</div>
+			
+			<div class="new-recipies">
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+				<div class="new-recipe">
+					<img src="img/tarif.jpg" alt="" height="80" width="120">
+					<div class="recipe-description">
+						<p>Tarif ismi</p>
+						<p>Kullanıcı Adı</p>
+					</div>
+				</div>
+			</div>
+			<div class="all-see-group">
+				<button class="all-see">Tamamını Göster</button>
+			</div>
+			
+		</div>
+	</section>
+
+	<footer>
+		<img src="img/footer-logo.png" alt="" height="80" width="80" class="footer-logo">
+		<div class="mind">
+			<p class="footer-copyright-text">Her hakkı saklıdır. © 2007-2019 Nefis Yemek Tarifleri</p>
+		</div>
+	</footer>
 </body>
 </html>
